syntax = "proto3";
package ununifi.nftbackedloan;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/UnUniFi/chain/x/nftbackedloan/types";

message Params {
  string min_staking_for_listing = 1 [
    (gogoproto.moretags)   = "yaml:\"min_staking_for_listing\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable)   = false
  ];
  uint64                   default_bid_active_rank                 = 2;
  repeated string          bid_tokens                              = 3;
  uint64                   auto_relisting_count_if_no_bid          = 4;
  uint64                   nft_listing_delay_seconds               = 5;
  uint64                   nft_listing_period_initial              = 6;
  uint64                   nft_listing_cancel_required_seconds     = 7;
  uint64                   nft_listing_cancel_fee_percentage       = 8;
  uint64                   nft_listing_gap_time                    = 9;
  uint64                   bid_cancel_required_seconds             = 10;
  uint64                   bid_token_disburse_seconds_after_cancel = 11;
  uint64                   nft_listing_full_payment_period         = 12;
  uint64                   nft_listing_nft_delivery_period         = 13;
  uint64                   nft_creator_share_percentage            = 14;
  string                   market_administrator                    = 15;
  uint64                   nft_listing_commission_fee              = 16;
  uint64                   nft_listing_extend_seconds              = 17;
  cosmos.base.v1beta1.Coin nft_listing_period_extend_fee_per_hour  = 18 [(gogoproto.nullable) = false];
}
